# skill-issue

./: README.md  hello.py  pyproject.toml
collection/game_collect/: .gitignore  QUICKSTART.md  README.md  hello.py  pyproject.toml  test_install.py
collection/game_collect/examples/: README.md  train_example.py
collection/game_collect/game_collect/: __init__.py  recorder.py  viewer.py
process/depthany_3/: .cursorrules  .gitignore  README.md  hello.py  install.sh  pyproject.toml  test_installation.sh
process/depthany_3/Depth-Anything-3/: pyproject.toml  requirements.txt
process/depthany_3/Depth-Anything-3/docs/: API.md  CLI.md
process/depthany_3/Depth-Anything-3/src/depth_anything_3/: api.py  cli.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/app/modules/: __init__.py  event_handlers.py  model_inference.py  utils.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/model/: da3.py  dpt.py  dualdpt.py  gs_adapter.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/model/utils/: head_utils.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/services/: backend.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/utils/: geometry.py  parallel_utils.py  pose_align.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/utils/export/: __init__.py
process/depthany_3/Depth-Anything-3/src/depth_anything_3/utils/io/: input_processor.py  output_processor.py
process/depthany_3/depthany_3/: __init__.py  image_demo.py  model.py  webcam.py
process/depthany_3/examples/: README.md  process_image.py  simple_webcam.py
