[project]
name = "depthany-3"
version = "0.1.0"
description = "Webcam depth estimation using Depth Anything 3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.19.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "timm>=0.9.0",
]

[project.scripts]
depthany-webcam = "depthany_3.webcam:main"
depthany-image = "depthany_3.image_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
